k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: echo-server
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
