k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
spec:
  defaultBackend:
    service:
      name: echo-server
      port:
        number: 5678
